# WEBProjMUN

KIITMUNSocietyWebsite-main/: .env.production  .gitignore  API_DOCUMENTATION.md  README.md  RENDER_DEPLOY.md  admin_debug.txt  build-frontend.sh  munsociety_dev.db  package-lock.json  pyproject.toml  render.yaml  render_start.py  requirements.txt  start.sh  test_date_fix.py
KIITMUNSocietyWebsite-main/.github/: copilot-instructions.md
KIITMUNSocietyWebsite-main/app/: auth.py  database.py  database_clean.py  database_old.py  database_sqlite_backup.py  database_turso.py  db_utils.py  file_storage.py  main.py  schemas.py
KIITMUNSocietyWebsite-main/app/routers/: __init__.py  admin.py  auth.py  blogs.py  blogs_corrupted.py  blogs_fixed.py  blogs_new.py  carousel.py  public.py  resources.py  resources_fixed.py
KIITMUNSocietyWebsite-main/frontend/: .env.example  .env.local  .env.production  CAROUSEL_IMPLEMENTATION.md  EMAILJS_SETUP.md  INTEGRATION_GUIDE.md  RESIZABLE_NAVBAR_GUIDE.md  emailjs-test.js  ghost-buttons-implementation.html  next.config.js  package-lock.json  package.json  tailwind.config.js  test-emailjs.html  test-ghost-buttons.html  tsconfig.json
KIITMUNSocietyWebsite-main/frontend/.next/: BUILD_ID  app-build-manifest.json  app-path-routes-manifest.json  build-manifest.json  images-manifest.json  next-server.js.nft.json  prerender-manifest.js  prerender-manifest.json  required-server-files.json  routes-manifest.json  trace
KIITMUNSocietyWebsite-main/scripts/: populate_emails.py  setup_database.py
KIITMUNSocietyWebsite-main/tests/: test_main.py
(+321 files in other folders)
